# abstention-reasoning

./: .gitattributes  .gitignore  README.md  generation.py  pyproject.toml
data/: data_loader.py  dataset_manager.py  prompt_loader.py  readme.txt
data/connections/: build_groups_from_csv.py  connections_data.csv  evaluate.py  generation_template.txt  generation_template_3x3.txt  generations_mix.jsonl  groups.jsonl  manager.py  process.py  synthetic_generator.py  synthetic_groups.jsonl
data/connections/artifacts/: raw_dataset.jsonl  raw_dataset_4x4.jsonl  rl_train.parquet  rl_val.parquet  test.jsonl  train.jsonl
data/connections_synthetic/: process.py
data/countdown/: __init__.py  evaluate.py  generation_template.txt  manager.py
data/countdown/artifacts/: raw_dataset.jsonl  test.jsonl  train.jsonl
data/knights_and_knaves/: generation_template.txt  process.py
verl/: =0.7.0
verl/examples/data_preprocess/: countdown.py  countdown_from_scratch.py
verl/recipe/connections/: reward_function.py  run_connections.sh  verify_data.py
verl/recipe/countdown/: reward_function.py  run_countdown_generation_qwen2.5_1.5B.sh  run_countdown_qwen2.5-1.5B.sh  run_countdown_qwen2.5-3B.sh  slurm_script_countdown_qwen2.5-1.5B.sh
verl/verl/trainer/: main_generation.py  main_ppo.py
verl/verl/trainer/config/: generation.yaml  ppo_trainer.yaml
verl/verl/trainer/ppo/: metric_utils.py  ray_trainer.py  reward.py
verl/verl/utils/: torch_functional.py
verl/verl/utils/dataset/: rl_dataset.py
verl/verl/workers/: fsdp_workers.py
verl/verl/workers/reward_manager/: naive.py
(+1 files in other folders)
